# genai_clinicaltrials

./: .gitignore  CLEANUP_SUMMARY.md  DEPENDENCIES_INSTALLED.md  LANGGRAPH_COMPLETE_README.md  LLM_CONFIGURATION.md  Prot_000_parser_output.json  RAG_README.md  README.md  SCHEMA_EXAMPLES.md  SCHEMA_INTEGRATION_SUMMARY.md  SCHEMA_STRUCTURE.md  UPGRADE_INSTRUCTIONS.md  app.py  app_langgraph.py  app_langgraph_complete.py  app_langgraph_streaming.py  app_v1.py  check_pdf_structure.py  check_with_pymupdf.py  clinical_trail_parser.py  compare_parsers.py  debug_output.txt  debug_parser.py  detailed_diagnostics.py  enhanced_parser.py  example_usage.py  examples_enhanced_parser.py  extract_and_ingest.py  install_spacy_model.py  langgraph_workflow.py  multi_turn_extractor.py  parsed_clinical_trials.json  pdf_structure.txt  prompts.py  pymupdf_output.txt  pyproject.toml  quick_diagnostic.py  quick_parser_test.py  replace_app.py  requirements.txt  (+13 more)
.streamlit/: config.toml  secrets.toml
UI/: app.py
langgraph/: langgraph_workflow.py
langgraph_custom/: clinical_trials_downloader.py  enhanced_parser.py  extraction_schemas.py  langgraph_workflow.py  multi_turn_extractor.py  prompts.py  rag_tool.py  vector_db_manager.py
other/: CHANGES_SUMMARY.md  DEPLOYMENT_READY.md  LANGGRAPH_README.md  clinical_trail_parser.py  debug_extraction.py  generate_executive_report.py  generate_reports.py  workflow.py
reports/: PROJECT_REPORT.docx  PROJECT_REPORT.md  PROJECT_REPORT_EXECUTIVE.docx  PROJECT_REPORT_EXECUTIVE.md
tests/: debug_reextraction_flow.py  debug_state.py  (+1 more)
utils/: generate_docx.py  (+2 more)
