[tool.poetry]
name = "genai-clinicaltrials"
version = "0.1.0"
description = "Clinical Trials Information Extraction System using LangGraph"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = ">=1.28.0"
openai = ">=1.0.0"
python-dotenv = ">=1.0.0"
tiktoken = ">=0.5.0"
langgraph = ">=0.2.0"
langchain = ">=0.1.0"
langchain-openai = ">=0.0.5"
langchain-core = ">=0.1.0"
langchain-community = ">=0.0.20"
PyMuPDF = ">=1.23.0"
pdfplumber = ">=0.10.0"
"pdfminer.six" = ">=20221105"
Pillow = ">=10.0.0"
PyPDF2 = ">=3.0.0"
pytesseract = ">=0.3.10"
spacy = ">=3.7.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
requests = ">=2.31.0"
fpdf = ">=1.7.2"
chromadb = ">=0.4.18"
sentence-transformers = ">=2.2.2"
faiss-cpu = ">=1.7.4"
graphviz = ">=0.20.0"
matplotlib = ">=3.7.0"
python-docx = ">=0.8.11"
markdown = ">=3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
